--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -19,6 +19,10 @@ header{
     float: right;
 }
 
+.mobile{
+    display: block;
+}
+
 ul{
     list-style-type: none;
     margin: 0;
@@ -80,28 +84,32 @@ button:hover{
 }
 
 
-.content-sidebar{
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: space-between;
- }
-
-.col-2{
-    display: inline-flex;
-    align-content: center;
-
+.hero-container{
+    display: flex;
 }
 
-.col-2 img{
-    width: 35%;
-    height: 20%;
+.hero-main{
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    flex:1;
 }
- .content-sidebar > *:nth-child(1){
-    flex: 1 1 70%;
- }
- .content-sidebar > *:nth-child(2){
-    flex: 1 1 30%;
- }
+
+.hero-child{
+    display: flex;
+    align-items: center;
+    padding: 15px;
+}
+
+.hero-child img{
+    width: 20%;
+    height: auto;
+    padding: 1rem;
+}
+
+.hero-child a{
+    color: blue;
+}
 
  .main{   
     background-color: lightgray;
@@ -132,7 +140,6 @@ button:hover{
     border-radius: 5px;
     color: black;
     text-decoration: none;
-    box-shadow: 3px 3px 14px rgba(255, 155, 5,0.5);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -141,7 +148,6 @@ button:hover{
 }
  .card:hover{
     transform: translateY(-1rem);
-    box-shadow: 3px 3px 17px rgba(255, 155, 5,0.8);
  }
 
 .card-img{
@@ -182,9 +188,15 @@ button:hover{
 }
 
 .thesis-sidebar{
-    flex: 0 0 40%;
+   /* flex: 0 0 40%;
     display: flex;
-    flex:wrap;
+    flex:wrap; */
+}
+
+.thesis-child{
+    display: flex;
+    align-items: center;
+    padding: 15px;
 }
 
 .thesis-sidebar img{
@@ -196,9 +208,143 @@ button:hover{
 }
 
 .img-box img{
-    width:100%;
+    width:65%;
     flex: 0 0 300px;
 }
 .info-box{
     padding: 1rem;
+}
+
+footer{
+    border-top: 1px solid grey;
+    padding: 1rem 1.5rem;
+    
+}
+
+footer ul{
+    float: right;  
+}
+
+footer li a{
+    color: black;
+    font-size: 13px;
+}
+
+footer p{
+    display: inline;
+}
+
+@media only screen and (max-width:1500px){
+
+    .mobile{
+        display: none;
+    }
+
+    #hero-img-mobile{
+        display: none;
+    }
+}
+
+@media  only screen and (max-width:375px) and (max-height:820px) {
+    
+
+    header{
+        height: 64px;
+        justify-content: center;
+        padding-bottom: 1rem;
+    }
+    .mobile{
+        display: block;
+    }
+
+    .nav{
+        display: none;
+    }
+
+    .banner{
+        display: block;
+        text-align: center;
+    }
+
+    .banner img{
+        padding: 0;
+        max-width: 100%;
+        
+    }
+    .banner button{
+        width:80%;
+        margin-top: 1.5rem;
+        margin-bottom:2rem ;
+    }
+
+    .hero-container{
+        justify-content: center;
+        align-items: center;
+    }
+    .hero img{
+        display: none;
+    }
+    
+    #hero-img-mobile{
+        display: block;
+        width: 90%;
+    }
+
+    .hero-child{
+        display: block;
+        text-align: center;
+    }
+    .hero-main{
+        display: none;
+    }
+    .main{
+        background-color: white;
+        padding: 0rem;
+        border: 0.5px solid grey;
+    }
+    .card{
+        background-color: lightgray;
+    }
+
+    .cards{
+        padding-bottom: 2.5rem;
+    }
+    
+    .card-img {
+        display:none;
+    }
+    .card-des{
+        display: none;
+    }
+    .thesis-container{
+        max-width: 400px;
+    }
+
+    .thesis-main{
+        padding: 0px;
+    }
+    .thesis-main-container h1{
+        padding-top: 2rem;
+        padding-bottom: 1rem;
+    }
+    .thesis-main video{
+        width: 100%;
+        height: 100%;
+        padding-bottom: 1.5rem;
+    }
+    .thesis-main h2, p{
+        display: none;
+    }
+
+    .thesis-sidebar{
+        display: none;
+    }
+
+    footer ul{
+        display: none;
+    }
+    
+    footer p{
+        font-size: 12px;
+    }
 }
